[package]
name = "anyrun-ha-assist"
version = "0.1.0"
edition = "2021"
description = "An anyrun plugin that lets you use Home Assistant's Assist."

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
ron = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
url = { version = "2.3.1", features = [ "serde" ] }
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0.96"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1.0"
r2d2 = "0.8.10"
fuzzy-matcher = "0.3.7"
